--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ deploy:
   provider: heroku
   api-key:
     secure: $HEROKU_API_KEY
-  app: asgardian-walkure-movie
+  app: asgardian-walkure-core
+  on:
+    branch: release/liv
 before_install:
   - chmod +x mvnw
+# safelist
+#branches:
+#  only:
+#    - release/liv
+#    - dev
