--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=a733e06f4109cd1c6c2c6e13a32360bcbfa7298769d7dc379f4bd
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
